Fix css issue happening on iOs (safari & chrome)

--- a/src/components/Buttons/RoundButton.css
+++ b/src/components/Buttons/RoundButton.css
@@ -2,8 +2,8 @@
     font-size: 20px;
     color: #9B9B9B;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     border: 1px solid #9B9B9B;
     
